----------------------------------------------------------------------
 OmegaT 2.5.3
----------------------------------------------------------------------
   1 Enhancement
   1 Bug fix
   0 Localisation update
----------------------------------------------------------------------
2.5.3 vs. 2.5.2 update 2

  Implemented requests:

  - (X)HTML filters: hide content of tags based on attributes
  http://sourceforge.net/support/tracker.php?aid=3513384

  Bug fixes:

  - After loading or reloading the project, the focus was on the Matches
pane rather than on the Editor

----------------------------------------------------------------------
 OmegaT 2.5.2 update 2
----------------------------------------------------------------------
   1 Enhancement
   5 Bug fixes
   1 Localisation update
----------------------------------------------------------------------
2.5.2 update 2 vs. 2.5.2

  Other enhancements:

  - The writeable glossary file can now have a .utf8 extension instead
of a .txt one, .txt being still the default

  Bug fixes:

  - When using Remove Tags, some non-OmegaT tags (e.g., %s, depending on 
the kind of tags checked in Options > Tag Validation) and some 
non-useful spaces could be copied at the end of the segment in the target
document

  - In some rare circumstances, the display of matches in the Fuzzy Matches
pane could be very slow

  - When the Fuzzy Matches pane was closed, the explanation text was 
displayed in bold instead of the initial non-bold attribute

  - In TMXs, the end of line was hardcoded as LF, instead of using the 
system line separator (e.g., CR+LF under Windows, LF under Linux)

  - In the Android filter, the "do not translate" mark has been corrected

  Localisation updates:

  - Dutch localisation updated to 2.5.2 (UI)

----------------------------------------------------------------------
 OmegaT 2.5.2 update 1
----------------------------------------------------------------------
   0 Enhancement
   1 Bug fix